# Nowlez-Munshi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apps/bot/: README.md  pyproject.toml
apps/bot/nm_bot/: __init__.py  app.py  commands.py  search_flow.py
apps/bot/tests/: conftest.py  test_app.py  test_commands.py  test_onboarding.py  test_portfolio_commands.py  test_search_flow.py  test_stop_optout.py
apps/web/: README.md  pyproject.toml
apps/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
apps/web/frontend/public/: manifest.webmanifest  sw.js
apps/web/frontend/src/: Admin.jsx  App.jsx  Calendar.jsx  CaseBook.jsx  CaseDetail.jsx  Chat.jsx  Documents.jsx  Login.jsx  Notifications.jsx  Search.jsx  Team.jsx  api.js  i18n.js  main.jsx  push.js  styles.css
apps/web/nm_web/: __init__.py  app.py  deps.py  serializers.py
apps/web/nm_web/routers/: admin.py  ask.py  auth.py  billing.py  (+10 more)
apps/web/tests/: conftest.py  test_admin.py  test_api.py  test_ask.py  test_ask_feedback_edit.py  test_billing.py  test_continuity.py  test_coupons_referrals.py  test_document_library.py  test_documents.py  test_export.py  test_i18n.py  test_ics.py  test_insights.py  test_library.py  test_metrics.py  test_profile.py  test_public.py  test_push.py  test_search.py  test_teams.py  test_uploads.py
apps/worker/: README.md  pyproject.toml
apps/worker/nm_worker/: __init__.py  billing.py  canary.py  digest.py  documents.py  drip.py  reengage.py  send_worker.py  sweep.py
apps/worker/tests/: test_billing_cron.py  test_sweep.py
(+47 files in other folders)
