[project]
name = "nm-bot"
version = "0.1.0"
description = "Nowlez Munshi WhatsApp bot: webhook + command router."
requires-python = ">=3.11"
# nm-core is provided by the workspace (installed editable); not a PyPI dep.
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nm_bot"]
